--- a/index.html
+++ b/index.html
@@ -232,15 +232,23 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <h3 class="cta-head">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn-foot btn btn-light btn-lg download-button">
+        <i class="fa-brands fa-google-play"></i> Download
+      </button>
+      <button type="button" class="btn-foot btn btn-dark btn-lg download-button">
+        <i class="fab fa-apple"></i> Download
+      </button>
     </section>
 
     <!-- Footer -->
 
     <footer id="footer">
-      <p>© Copyright TinDog</p>
+      <i class="fa-foot fa-brands fa-2x fa-facebook"></i>
+      <i class="fa-foot fa-brands fa-2x fa-twitter"></i>
+      <i class="fa-foot fa-brands fa-2x fa-instagram"></i>
+      <i class="fa-foot fa-regular fa-2x fa-envelope"></i>
+      <p class="footer-p">© 2024 Copyright TinDog</p>
     </footer>
   </body>
 </html>
